--- a/losturg/index.html
+++ b/losturg/index.html
@@ -1,1 +1,2 @@
 <h3>The First Federal Republic of Losturg Dispatch 9:22, April 28, 2023</h3>
+<p>The Losturgian people are being protected from the oppressors, Diverospenva, and have been freed from their tyranny, and are now free of their genocidal visions. The people of Losturg declare a legislation that requires those who visit the country to have Losturgian decent. To protect the citizens of Losturg means to only allow Losturgians to participate in normal living styles.</p>              
