--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <h1>World of Othal, basic information of Nations.</h1>
   <br>
-  <h2>The First Federal Republic of Losturg</h2>
+  <h2><a href="./losturg/index.html">The First Federal Republic of Losturg</a></h2>
   <p>Leader: Rodney</p>
   <p>Population: 760k</p>
   <p>Ideology: Authoritarianism</p>
   <p>Military Persons: 84k</p>
-  <img src="https://static.wikia.nocookie.net/othal/images/1/1d/Losturg.png/revision/latest/scale-to-width-down/180?cb=20230427201156" width="35%">
+  <img src="https://raw.githubusercontent.com/RodneyInfrared/WOO/main/losturg.png" width="15%">
   <br>
   <h2>Rogue Nation of Diverospenva</h2>
   <p>Leader: Unkown</p>
@@ -29,6 +29,6 @@
   <p>Population: 513k</p>
   <p>Ideology: Conservative Democracy</p>
   <p>Military Persons: 53k</p>
-  <img src="https://static.wikia.nocookie.net/othal/images/3/34/Sozoainastars.png/revision/latest/scale-to-width-down/180?cb=20230428133503" width="35%">
+  <img src="https://raw.githubusercontent.com/RodneyInfrared/WOO/main/Sozoainastars.png" width="15%">
 </body>
 </html>
