--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>World of Othal, basic information of Nations.</h1>
-  <img src="https://raw.githubusercontent.com/RodneyInfrared/WOO/main/othal.png" width="25%">
+  <a href="https://othal.fandom.com/wiki/Maps_of_Othal"><p>Maps</p></a>
   <br>
   <h2><a href="./losturg/index.html">The First Federal Republic of Losturg</a></h2>
   <p>Leader: Rodney</p>
