--- a/losturg/index.html
+++ b/losturg/index.html
@@ -1,2 +1,6 @@
+<h3>The First Federal Republic of Losturg Dispatch 10:27, April 28, 2023</h3>
+<p>The Losturgian people officially recognize the three breakaway states from Diverospenva (Shadow Republic, Chad Empire, and Udrea Imperium), and plans on establishing diplomatic ties and defense pacts with these nations. To stabilize the region means to remove Diverospenva from power and destroy all anarchist republics that come in the future and replace them with a proper government that will work on solving problems and having formal ecnomic and diplomatic ties with other nations of Othal. With this announcement, I would like to formerly declare war on Diverospenva, and form a puppet republic of spritish Authoritarianism, and build great citeis with great economic prosperity in the region.</p>
+<p><strong>- Rodney, Umholi Ophakeme of Losturg.</strong></p>
+<br>
 <h3>The First Federal Republic of Losturg Dispatch 9:22, April 28, 2023</h3>
 <p>The Losturgian people are being protected from the oppressors, Diverospenva, and have been freed from their tyranny, and are now free of their genocidal visions. The people of Losturg declare a legislation that requires those who visit the country to have Losturgian decent. To protect the citizens of Losturg means to only allow Losturgians to participate in normal living styles.</p>              
